--- a/services/dy-2Dgraph/use-cases/docker-compose.yml
+++ b/services/dy-2Dgraph/use-cases/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - SIMCORE_PIPELINE_ID=${SIMCORE_PIPELINE_ID}
       - SIMCORE_NODE_UUID=${SIMCORE_NODE_UUID}
     ports:
       - '1234:8888'
@@ -36,6 +37,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - SIMCORE_PIPELINE_ID=${SIMCORE_PIPELINE_ID}
       - SIMCORE_NODE_UUID=${SIMCORE_NODE_UUID}
     ports:
       - '1235:8888'
@@ -56,6 +58,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - SIMCORE_PIPELINE_ID=${SIMCORE_PIPELINE_ID}
       - SIMCORE_NODE_UUID=${SIMCORE_NODE_UUID}
     ports:
       - '1236:8888'
