--- a/services/dy-2Dgraph/use-cases/cc/cc-twod/cc_config-twod.json
+++ b/services/dy-2Dgraph/use-cases/cc/cc-twod/cc_config-twod.json
@@ -4,7 +4,7 @@
         {
             "key": "in_1",
             "label": "ap",
-            "description": "these are computed data out of a pipeline",
+            "desc": "these are computed data out of a pipeline",
             "type": "folder",
             "value": "D:\\plotlydemo\\data\\2D_OUTPUT",
             "timestamp": "2018-05-23T15:34:53.511Z"
