--- a/services/dy-2Dgraph/use-cases/docker-compose.yml
+++ b/services/dy-2Dgraph/use-cases/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       args: 
         NOTEBOOK_NAME: cc_single_cell.ipynb
         NOTEBOOK_FOLDER_NAME: cc-single-cell
+        JSON_CONFIGURATION: cc_single_cell.json
     environment: 
       - S3_ENDPOINT=${S3_ENDPOINT}
       - S3_ACCESS_KEY=${S3_ACCESS_KEY}
@@ -16,7 +17,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
-      - SIMCORE_PIPELINE_ID=${SIMCORE_PIPELINE_ID}
+      #- SIMCORE_PIPELINE_ID=${SIMCORE_PIPELINE_ID}
       - SIMCORE_NODE_UUID=${SIMCORE_NODE_UUID}
     ports:
       - '1234:8888'
@@ -27,7 +28,8 @@ services:
       target: production
       args: 
         NOTEBOOK_NAME: cc_oned.ipynb
-        NOTEBOOK_FOLDER_NAME: cc-oned      
+        NOTEBOOK_FOLDER_NAME: cc-oned
+        JSON_CONFIGURATION: cc_config-oned.json
     environment: 
       - S3_ENDPOINT=${S3_ENDPOINT}
       - S3_ACCESS_KEY=${S3_ACCESS_KEY}
@@ -37,7 +39,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
-      - SIMCORE_PIPELINE_ID=${SIMCORE_PIPELINE_ID}
+      #- SIMCORE_PIPELINE_ID=${SIMCORE_PIPELINE_ID}
       - SIMCORE_NODE_UUID=${SIMCORE_NODE_UUID}
     ports:
       - '1235:8888'
@@ -49,6 +51,7 @@ services:
       args: 
         NOTEBOOK_NAME: cc_2d.ipynb
         NOTEBOOK_FOLDER_NAME: cc-twod
+        JSON_CONFIGURATION: cc_config-twod.json
     environment: 
       - S3_ENDPOINT=${S3_ENDPOINT}
       - S3_ACCESS_KEY=${S3_ACCESS_KEY}
@@ -58,7 +61,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
-      - SIMCORE_PIPELINE_ID=${SIMCORE_PIPELINE_ID}
+      #- SIMCORE_PIPELINE_ID=${SIMCORE_PIPELINE_ID}
       - SIMCORE_NODE_UUID=${SIMCORE_NODE_UUID}
     ports:
       - '1236:8888'
