--- a/services/dy-2Dgraph/use-cases/cc/cc-oned/cc_config-oned.json
+++ b/services/dy-2Dgraph/use-cases/cc/cc-oned/cc_config-oned.json
@@ -5,16 +5,16 @@
             "key": "in_1",
             "label": "ECGs",
             "desc": "these are computed data out of a pipeline",
-            "type": "file-url",
-            "value": "D:\\plotlydemo\\data\\1D_OUTPUT\\ECGS.txt",
+            "type": "fileUrl",
+            "value": "link.SIMCORE_NODE_UUID.in_1",
             "timestamp": "2018-05-23T15:34:53.511Z"
         },
         {
             "key": "in_2",
             "label": "all results 1Hz",
             "desc": "computed data out of a pipeline",
-            "type": "file-url",
-            "value": "D:\\plotlydemo\\data\\1D_OUTPUT\\ap.txt",
+            "type": "fileUrl",
+            "value": "link.SIMCORE_NODE_UUID.in_2",
             "timestamp": "2018-05-23T15:34:53.511Z"
         }
     ],
