--- a/services/dy-2Dgraph/use-cases/docker-compose.devel.yml
+++ b/services/dy-2Dgraph/use-cases/docker-compose.devel.yml
@@ -3,27 +3,27 @@ services:
   cc-0d:
     build:
       target: development
-    volumes: 
-      - ./data:/home/jovyan/data
-      - ./config:/home/jovyan/config
+      args:
+        JSON_CONFIGURATION: cc_single_cell.json
+        JSON_CONFIGURATION_FOLDER: cc-single-cell
     depends_on:
       - postgres
   #--------------------------------------------------------------------
   cc-1d:
     build:
       target: development
-    volumes: 
-      - ./data:/home/jovyan/data
-      - ./config:/home/jovyan/config
+      args:
+        JSON_CONFIGURATION: cc_config-oned.json
+        JSON_CONFIGURATION_FOLDER: cc-oned
     depends_on:
       - postgres
   #--------------------------------------------------------------------
   cc-2d:
     build:
       target: development
-    volumes: 
-      - ./data:/home/jovyan/data
-      - ./config:/home/jovyan/config
+      args:
+        JSON_CONFIGURATION: cc_config-twod.json
+        JSON_CONFIGURATION_FOLDER: cc-twod
     depends_on:
       - postgres
   #--------------------------------------------------------------------
@@ -33,8 +33,6 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
-    volumes:
-      - postgres:/var/lib/postgresql/data
     ports:
       - "5432:5432"
   #--------------------------------------------------------------------
@@ -53,5 +51,3 @@ services:
     ports:
       - "9001:9000"
     command: server /data
-volumes:
-  postgres:
