--- a/services/web/shared/rest-api-oa3-0.0.1.yaml
+++ b/services/web/shared/rest-api-oa3-0.0.1.yaml
@@ -167,7 +167,7 @@ paths:
           application/json:
             schema:
               type: array
-              minItems: 1
+              # minItems: 1
               example:
                 - partNumber: 1
                   eTag: 7e10e7d25dc4581d89b9285be5f384fd
