refactored production docker-compose for 2D graphs (does not set env variables) refactored dev docker-compose (does set env variable for local execution) dockerfile exposes the necessary env variables

--- a/services/dy-2Dgraph/use-cases/cc/Dockerfile
+++ b/services/dy-2Dgraph/use-cases/cc/Dockerfile
@@ -4,6 +4,14 @@ LABEL maintainer="sanderegg"
 
 ENV SIMCORE_PIPELINE_ID="-1"
 ENV SIMCORE_NODE_UUID="-1"
+ENV S3_ENDPOINT="=1"
+ENV S3_ACCESS_KEY="-1"
+ENV S3_SECRET_KEY="-1"
+ENV S3_BUCKET_NAME="-1"
+ENV POSTGRES_ENDPOINT="-1"
+ENV POSTGRES_USER="-1"
+ENV POSTGRES_PASSWORD="-1"
+ENV POSTGRES_DB="-1"
 
 EXPOSE 8888
 
