changed description keyword to desc fixed tests

--- a/packages/simcore-sdk/src/simcore_sdk/config/connection_config.json
+++ b/packages/simcore-sdk/src/simcore_sdk/config/connection_config.json
@@ -4,7 +4,7 @@
         {
             "key": "in_1",
             "label": "computational data",
-            "description": "these are computed data out of a pipeline",
+            "desc": "these are computed data out of a pipeline",
             "type": "file-url",
             "value": "/home/jovyan/data/outputControllerOut.dat",
             "timestamp": "2018-05-23T15:34:53.511Z"
@@ -12,7 +12,7 @@
         {
             "key": "in_5",
             "label": "some number",
-            "description": "numbering things",
+            "desc": "numbering things",
             "type": "int",
             "value": "666",
             "timestamp": "2018-05-23T15:34:53.511Z"
@@ -22,7 +22,7 @@
         {
             "key": "out_1",
             "label": "some boolean output",
-            "description": "could be true or false...",
+            "desc": "could be true or false...",
             "type": "bool",
             "value": "null",
             "timestamp": "2018-05-23T15:34:53.511Z"
