--- a/services/dy-2Dgraph/use-cases/cc/cc-twod/cc_config-twod.json
+++ b/services/dy-2Dgraph/use-cases/cc/cc-twod/cc_config-twod.json
@@ -5,7 +5,7 @@
             "key": "in_1",
             "label": "ap",
             "desc": "these are computed data out of a pipeline",
-            "type": "folderUrl",
+            "type": "folder-url",
             "value": "link.SIMCORE_NODE_UUID.in_1",
             "timestamp": "2018-05-23T15:34:53.511Z"
         }
