replace minio public repo with our own temporary one

--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -41,8 +41,7 @@ RUN apk add --no-cache \
 
 ENV HOME /home/scu
 ENV SIMCORE_WEB_OUTDIR $HOME/client
-ENV PYTHONPATH "$HOME/server/src:$HOME/packages"
-
+ENV PYTHONPATH "$HOME/server/src:$HOME/packages/simcore-sdk/src:$HOME/packages/s3wrapper/src"
 
 WORKDIR /home/scu
 
