WIP: Test and doc servers - Added a http-server in qx_client image - Unique entrypoint for qx-compiler, generator and http-server - added services to serve api-doc and test runner - renamed script to .docker since it is a dedicated config folder

--- a/services/web/client/.gitignore
+++ b/services/web/client/.gitignore
@@ -8,3 +8,7 @@ contrib*
 node_modules/*
 source/resource/iconfont/fontawesome5
 source/resource/iconfont/material
+
+# generator outputs
+/api/
+/test/
