Created setup in package/ modules and installed in editable mode in server

--- a/services/web/server/requirements-dev.txt
+++ b/services/web/server/requirements-dev.txt
@@ -2,6 +2,11 @@
 # `setup.py` already contains instructions to install dependencies,
 -e .
 
+# packages
+-e ../../../packages/s3wrapper/
+-e ../../../packages/simcore-sdk/
+
+
 # testing
 -r requirements/testing.txt
 
